{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 57,
  "lineage": "a2be6521-b559-f422-087c-56e1b96ff43c",
  "resources": [
    {
      "module": "module.terraform-ansible-docker",
      "mode": "managed",
      "type": "aws_eip",
      "name": "manager",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05d3a6c84556f318d",
            "domain": "vpc",
            "id": "eipalloc-0e1ed2d1a99b210b5",
            "instance": "i-055779ae52f44d45d",
            "network_interface": "eni-0e9b75cfbe93e32b4",
            "private_dns": "ip-172-21-15-116.ap-south-1.compute.internal",
            "private_ip": "172.21.15.116",
            "public_dns": "ec2-13-126-167-44.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.167.44",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.terraform-ansible-docker.aws_instance.swarm_manager",
            "module.terraform-ansible-docker.aws_key_pair.local",
            "module.terraform-ansible-docker.aws_placement_group.swarm_manager_nodes",
            "module.terraform-ansible-docker.aws_security_group.swarm_manager_node",
            "module.terraform-ansible-docker.aws_security_group.swarm_node",
            "module.terraform-ansible-docker.aws_subnet.swarm_nodes",
            "module.terraform-ansible-docker.aws_vpc.swarm"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-ansible-docker",
      "mode": "managed",
      "type": "aws_eip",
      "name": "worker",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07c25799069f8aace",
            "domain": "vpc",
            "id": "eipalloc-035d37dcf008ee793",
            "instance": "i-0054eedc7ef9b4a03",
            "network_interface": "eni-011893fb1008f8b29",
            "private_dns": "ip-172-21-0-79.ap-south-1.compute.internal",
            "private_ip": "172.21.0.79",
            "public_dns": "ec2-3-6-21-61.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.21.61",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.terraform-ansible-docker.aws_instance.swarm_worker",
            "module.terraform-ansible-docker.aws_key_pair.local",
            "module.terraform-ansible-docker.aws_placement_group.swarm_worker_nodes",
            "module.terraform-ansible-docker.aws_security_group.swarm_node",
            "module.terraform-ansible-docker.aws_subnet.swarm_nodes",
            "module.terraform-ansible-docker.aws_vpc.swarm"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-090e2173141074d5e",
            "domain": "vpc",
            "id": "eipalloc-0f305a2f6fe84254c",
            "instance": "i-07028d6860ba1e376",
            "network_interface": "eni-01615649b06559a71",
            "private_dns": "ip-172-21-31-7.ap-south-1.compute.internal",
            "private_ip": "172.21.31.7",
            "public_dns": "ec2-15-206-198-139.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.198.139",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.terraform-ansible-docker.aws_instance.swarm_worker",
            "module.terraform-ansible-docker.aws_key_pair.local",
            "module.terraform-ansible-docker.aws_placement_group.swarm_worker_nodes",
            "module.terraform-ansible-docker.aws_security_group.swarm_node",
            "module.terraform-ansible-docker.aws_subnet.swarm_nodes",
            "module.terraform-ansible-docker.aws_vpc.swarm"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-ansible-docker",
      "mode": "managed",
      "type": "aws_instance",
      "name": "swarm_manager",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0245841fc4b40e22f",
            "arn": "arn:aws:ec2:ap-south-1:730239861545:instance/i-055779ae52f44d45d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-055779ae52f44d45d",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "terraform-production",
            "monitoring": false,
            "placement_group": "terraform-production-swarm-manager-nodes",
            "primary_network_interface_id": "eni-0e9b75cfbe93e32b4",
            "private_dns": "ip-172-21-15-116.ap-south-1.compute.internal",
            "private_ip": "172.21.15.116",
            "public_ip": "13.233.23.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-south-1:730239861545:key/1813bc7c-ee5a-4c54-bf96-30d737e2993e",
                "volume_id": "vol-0c4c33e809c647d4c",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0464c8aa3ed462e52",
            "tags": {
              "Name": "Docker-Swarm-Manager-1",
              "Orchestrator": "Swarm"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "Docker-Swarm-Manager-1",
              "Orchestrator": "Swarm"
            },
            "vpc_security_group_ids": [
              "sg-027dbfce0ceb82263",
              "sg-0a1dfc3a806ad483b"
            ]
          },
          "dependencies": [
            "module.terraform-ansible-docker.aws_key_pair.local",
            "module.terraform-ansible-docker.aws_placement_group.swarm_manager_nodes",
            "module.terraform-ansible-docker.aws_security_group.swarm_manager_node",
            "module.terraform-ansible-docker.aws_security_group.swarm_node",
            "module.terraform-ansible-docker.aws_subnet.swarm_nodes",
            "module.terraform-ansible-docker.aws_vpc.swarm"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-ansible-docker",
      "mode": "managed",
      "type": "aws_instance",
      "name": "swarm_worker",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0245841fc4b40e22f",
            "arn": "arn:aws:ec2:ap-south-1:730239861545:instance/i-0054eedc7ef9b4a03",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0054eedc7ef9b4a03",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "terraform-production",
            "monitoring": false,
            "placement_group": "terraform-production-swarm-worker-nodes",
            "primary_network_interface_id": "eni-011893fb1008f8b29",
            "private_dns": "ip-172-21-0-79.ap-south-1.compute.internal",
            "private_ip": "172.21.0.79",
            "public_ip": "13.232.58.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-south-1:730239861545:key/1813bc7c-ee5a-4c54-bf96-30d737e2993e",
                "volume_id": "vol-0c7497b988d44c7bb",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0464c8aa3ed462e52",
            "tags": {
              "Name": "Docker-Swarm-Worker-1",
              "Orchestrator": "Swarm"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "Docker-Swarm-Worker-1",
              "Orchestrator": "Swarm"
            },
            "vpc_security_group_ids": [
              "sg-027dbfce0ceb82263"
            ]
          },
          "dependencies": [
            "module.terraform-ansible-docker.aws_key_pair.local",
            "module.terraform-ansible-docker.aws_placement_group.swarm_worker_nodes",
            "module.terraform-ansible-docker.aws_security_group.swarm_node",
            "module.terraform-ansible-docker.aws_subnet.swarm_nodes",
            "module.terraform-ansible-docker.aws_vpc.swarm"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0245841fc4b40e22f",
            "arn": "arn:aws:ec2:ap-south-1:730239861545:instance/i-07028d6860ba1e376",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-07028d6860ba1e376",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "terraform-production",
            "monitoring": false,
            "placement_group": "terraform-production-swarm-worker-nodes",
            "primary_network_interface_id": "eni-01615649b06559a71",
            "private_dns": "ip-172-21-31-7.ap-south-1.compute.internal",
            "private_ip": "172.21.31.7",
            "public_ip": "35.154.74.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-south-1:730239861545:key/1813bc7c-ee5a-4c54-bf96-30d737e2993e",
                "volume_id": "vol-0163a45de116d9ca0",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ea081cb953262173",
            "tags": {
              "Name": "Docker-Swarm-Worker-2",
              "Orchestrator": "Swarm"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "Docker-Swarm-Worker-2",
              "Orchestrator": "Swarm"
            },
            "vpc_security_group_ids": [
              "sg-027dbfce0ceb82263"
            ]
          },
          "dependencies": [
            "module.terraform-ansible-docker.aws_key_pair.local",
            "module.terraform-ansible-docker.aws_placement_group.swarm_worker_nodes",
            "module.terraform-ansible-docker.aws_security_group.swarm_node",
            "module.terraform-ansible-docker.aws_subnet.swarm_nodes",
            "module.terraform-ansible-docker.aws_vpc.swarm"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-ansible-docker",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "swarm",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-040e7f1d920640ed8",
            "owner_id": "730239861545",
            "vpc_id": "vpc-0bc881aa241596582"
          },
          "dependencies": [
            "module.terraform-ansible-docker.aws_vpc.swarm"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-ansible-docker",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-040e7f1d920640ed8",
            "id": "r-rtb-096e1afbec7e3ac931080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-096e1afbec7e3ac93",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.terraform-ansible-docker.aws_internet_gateway.swarm",
            "module.terraform-ansible-docker.aws_vpc.swarm"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-ansible-docker",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "swarm_manager_node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730239861545:security-group/sg-0a1dfc3a806ad483b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a1dfc3a806ad483b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Docker Swarm management between managers",
                "from_port": 2377,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-027dbfce0ceb82263"
                ],
                "self": false,
                "to_port": 2377
              }
            ],
            "name": "terraform-production-swarm-manager-node",
            "name_prefix": null,
            "owner_id": "730239861545",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0bc881aa241596582"
          },
          "dependencies": [
            "module.terraform-ansible-docker.aws_security_group.swarm_node",
            "module.terraform-ansible-docker.aws_vpc.swarm"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-ansible-docker",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "swarm_node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730239861545:security-group/sg-027dbfce0ceb82263",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027dbfce0ceb82263",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Docker container network discovery",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 7946
              },
              {
                "cidr_blocks": [],
                "description": "Docker container network discovery",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 7946
              },
              {
                "cidr_blocks": [],
                "description": "Docker overlay network",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 4789
              }
            ],
            "name": "terraform-production-swarm-node",
            "name_prefix": null,
            "owner_id": "730239861545",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0bc881aa241596582"
          },
          "dependencies": [
            "module.terraform-ansible-docker.aws_vpc.swarm"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-ansible-docker",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "swarm_nodes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730239861545:subnet/subnet-0464c8aa3ed462e52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.21.0.0/20",
            "id": "subnet-0464c8aa3ed462e52",
            "map_public_ip_on_launch": true,
            "owner_id": "730239861545",
            "vpc_id": "vpc-0bc881aa241596582"
          },
          "dependencies": [
            "module.terraform-ansible-docker.aws_vpc.swarm"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730239861545:subnet/subnet-0ea081cb953262173",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.21.16.0/20",
            "id": "subnet-0ea081cb953262173",
            "map_public_ip_on_launch": true,
            "owner_id": "730239861545",
            "vpc_id": "vpc-0bc881aa241596582"
          },
          "dependencies": [
            "module.terraform-ansible-docker.aws_vpc.swarm"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730239861545:subnet/subnet-073ddd5ee7f211eac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.21.32.0/20",
            "id": "subnet-073ddd5ee7f211eac",
            "map_public_ip_on_launch": true,
            "owner_id": "730239861545",
            "vpc_id": "vpc-0bc881aa241596582"
          },
          "dependencies": [
            "module.terraform-ansible-docker.aws_vpc.swarm"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-ansible-docker",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "swarm",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730239861545:vpc/vpc-0bc881aa241596582",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.21.0.0/16",
            "default_network_acl_id": "acl-005c8f0a3488f58e6",
            "default_route_table_id": "rtb-096e1afbec7e3ac93",
            "default_security_group_id": "sg-0ec2b5756327f5cc3",
            "dhcp_options_id": "dopt-89e10de2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bc881aa241596582",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-096e1afbec7e3ac93",
            "owner_id": "730239861545",
            "tags": {
              "Name": "terraform-production-swarm"
            }
          }
        }
      ]
    }
  ]
}